--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </section>
 <footer>
     <p>
-        Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>
+        Site criado por Tiago</a> Utilizando as tecnicas do  <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoemVideo</a>
     </p>
 </footer>
 </body>
